0023756: VBO rendering problem (1)

Fixed asymmetric VBO unbind call in OpenGl_Text::drawText().